--- a/src/Frontend/Web/Vark.Web/_Imports.razor
+++ b/src/Frontend/Web/Vark.Web/_Imports.razor
@@ -7,3 +7,7 @@
 @using Microsoft.JSInterop
 @using Var.Web
 @using Var.Web.Shared
+@using Var.Web.Component
+@using Radzen
+@using Radzen.Blazor
+@using Chilite.Web.Layouts
